--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,6 +17,9 @@
             <li class="nav-item" routerLinkActive="active" (click)="onSelect('products')">
                 <a class="nav-link" routerLink="products-list">Produkty</a>
             </li>
+            <li class="nav-item" routerLinkActive="active" (click)="onSelect('products')">
+                <a class="nav-link" routerLink="user-site">Konto</a>
+            </li>
         </ul>
     </div>
 </nav>
